<resources>
    <string name="app_name">Quiz</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Quiz</string>
    <string name="second_fragment_label">Quiz</string>
    <string name="next">Next</string>
    <string name="previous">Restart</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="start">START</string>
    <string name="wanna_start_the_quiz">Wanna start the quiz</string>
    <string name="press_start">Press Start</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>